# chrono_des_vignes_2.0

./: .gitignore  Endpoint Methods Subdomain Rule Descript.txt  README.md  babel.md  create_db.py  db_setter.py  extract_routes.py  map.html  mypy.ini  pyproject.toml  requirements.txt  test.html  traduction_save.json  zipper.py
chrono_des_vignes/: __init__.py  babel.cfg  custom_field.py  custom_validators.py  lib.py  models.py  routes.py
chrono_des_vignes/admin/: __init__.py  form.py
chrono_des_vignes/dev/: __init__.py
chrono_des_vignes/livetrack/: __init__.py
chrono_des_vignes/static/: style.css  xlsx_test.xlsx
chrono_des_vignes/templates/: 0-home.html  layout.html  macro.html  sidebar.html
chrono_des_vignes/users/: __init__.py  form.py  forms.py
chrono_des_vignes/view/: __init__.py
flask_app/: __init__.py  admin_routes.py  babel.cfg  custom_field.py  custom_validators.py  custum_validators.py  forms.py  lib.py  models.py  routes.py
flask_app/admin/: __init__.py  form.py
flask_app/dev/: __init__.py
flask_app/static/: style.css
flask_app/templates/: 0-home.html  1.1.1-modify_edition.html  1.2.1-modify_parcours.html  1.2.1.1-map_iframe.html  2-login.html  3-signup.html  layout copy.html  layout.html  macro.html  sidebar copy.html  sidebar.html
flask_app/users/: __init__.py  forms.py
flask_app/view/: __init__.py
migrations/versions/: 11880aec8dbf_.py  32f0778215f8_.py  34700a04af2e_second_migration.py  5b122d22803a_initial_migration.py  b97b5e6296ac_passage_arg_key_peut_etre_null_et_plus_.py  (+2 more)
sql dumps/: README.md  db.sql  db_v2.dbml  site_stand_2025-01-25_112901.sql  site_structure_dump.sql  site_trace_2025-01-25_112819.sql
tests/: chart.html  coordonee.html  coordonee.py  html_test2.py  html_to_pdf.py  map.html  map.py  marquer.py  pdf_gen.py  svg_editor.html  svg_editor_v1.html  svg_editor_v2.html  test map.py  web.py  xlsx_test.py
typings/: colour.pyi  flask_babel.pyi  flask_bcrypt.pyi  flask_login.pyi  flask_wtf.pyi  icecream.pyi  xlsxwriter.pyi
(+165 files in other folders)
