[project]
name = "1-chrono-des-vignes-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colour==0.1.5",
    "flask==2.1.2",
    "flask-babel==2.0.0",
    "flask-bcrypt==1.0.1",
    "flask-login==0.6.1",
    "flask-migrate==4.0.1",
    "flask-socketio==5.5.1",
    "flask-sqlalchemy==2.5.1",
    "flask-wtf==1.0.1",
    "folium==0.19.4",
    "icecream==2.1.3",
    "markdown==3.3.7",
    "pillow==9.0.0",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "reportlab==3.6.9",
    "requests==2.28.1",
    "sqlalchemy==1.4.36",
    "sqlalchemy-utils==0.41.2",
    "werkzeug==2.1.2",
    "xlsxwriter==3.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "types-flask-migrate>=4.0.0.4",
    "types-flask-socketio>=5.5.0.20250516",
    "types-markdown>=3.8.0.20250415",
    "types-pillow>=10.2.0.20240822",
    "types-reportlab>=4.4.1.20250602",
    "types-requests>=2.31.0.6",
    "types-wtforms>=3.2.1.20250602",
]
