[project]
name = "1-chrono-des-vignes-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colour==0.1.5",
    "cryptography==44.0.0",
    "flask==3.0.3",
    "flask-babel==4.0.0",
    "flask-bcrypt==1.0.1",
    "flask-login==0.6.3",
    "flask-migrate==4.0.7",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "folium>=0.19.4",
    "icecream>=2.1.3",
    "markdown>=3.3.7",
    "pillow==10.4.0",
    "pymysql>=1.1.1",
    "python-dotenv==1.0.1",
    "reportlab==4.2.5",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "sqlalchemy-utils>=0.41.2",
    "werkzeug==3.0.4",
    "xlsxwriter>=3.0.3",
]

[dependency-groups]
dev = [
    "types-flask-socketio>=5.5.0.20250516",
]

[tool.pyright]
reportImportCycles = false
reportUnusedCallResult = false
